--- a/meccsek.html
+++ b/meccsek.html
@@ -10,7 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Inter:wght@300;500;800&display=swap" rel="stylesheet">
     <style>
-   :root {
+  :root {
     --bg: #020617;
     --glass: rgba(15, 23, 42, 0.75);
     --neon-green: #00ff88;
@@ -35,19 +35,29 @@ body {
     background: var(--bg); 
     color: var(--text); 
     font-family: 'Inter', sans-serif; 
-    min-height: 100vh; 
-    overflow-x: hidden;
+    height: 100vh; 
+    overflow-x: hidden; 
+    position: relative; 
     transition: background 0.5s; 
 }
 
 /* --- Háttér Animációk --- */
-.bg-animation { position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: -1; overflow: hidden; filter: blur(100px); opacity: 0.4; }
+.bg-animation { position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: -1; overflow: hidden; filter: blur(100px); opacity: 0.5; }
 .blob { position: absolute; width: 600px; height: 600px; border-radius: 50%; mix-blend-mode: screen; animation: move 25s infinite alternate ease-in-out; }
 .blob-1 { background: var(--cl-gs); top: -10%; left: -10%; }
 .blob-2 { background: var(--neon-green); bottom: -10%; right: -10%; animation-delay: -5s; }
+.blob-3 { background: var(--el-gs); top: 30%; left: 30%; animation-delay: -10s; }
 @keyframes move { 0% { transform: translate(0, 0) scale(1); } 100% { transform: translate(10vw, 10vh) scale(1.2); } }
 
-/* --- Navigáció --- */
+/* --- Banner & Navigáció --- */
+#goal-banner {
+    position: fixed; top: -100px; left: 0; right: 0; height: 65px; z-index: 9999 !important;
+    background: var(--neon-green); color: #000; display: flex; align-items: center; justify-content: center;
+    font-family: 'Orbitron'; font-weight: 900; font-size: 1.6rem;
+    transition: 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275); box-shadow: 0 0 50px rgba(0,255,136,0.6);
+}
+#goal-banner.show { top: 0; }
+
 nav { 
     position: fixed; top: 0; left: 0; right: 0; height: 75px; 
     display: flex; justify-content: space-between; align-items: center; 
@@ -55,119 +65,125 @@ nav {
     border-bottom: 1px solid var(--border); z-index: 2000; 
 }
 .logo { font-family: 'Orbitron'; font-weight: 900; font-size: 1.4rem; color: var(--neon-blue); letter-spacing: 3px; }
-.nav-tools { display: flex; align-items: center; gap: 12px; }
-/* --- Elrendezés --- */
-.main-wrapper { display: flex; margin-top: 75px; min-height: calc(100vh - 75px); width: 100%; }
 
-/* --- SIDEBAR (Bal oldali ligák) --- */
+/* --- Elrendezés --- */
+.main-wrapper { display: flex; margin-top: 75px; min-height: calc(100vh - 75px); }
+
+/* --- SIDEBAR (Bal oldal) --- */
 .sidebar {
     width: 70px;
     transition: width 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+    overflow-x: hidden;
+    white-space: nowrap;
+    flex-shrink: 0;
     background: rgba(10, 10, 12, 0.6);
     border-right: 1px solid var(--border);
-    overflow-x: hidden;
-    flex-shrink: 0;
 }
 .sidebar:hover { width: 280px; }
 
-.sidebar-header { padding: 20px; font-family: 'Orbitron'; font-size: 10px; color: var(--neon-blue); border-bottom: 1px solid var(--border); letter-spacing: 2px; }
+.sidebar-header { padding: 20px; font-family: 'Orbitron'; font-size: 11px; color: var(--neon-blue); border-bottom: 1px solid var(--border); letter-spacing: 2px; text-transform: uppercase; }
 
 .league-item {
     display: flex; align-items: center; padding: 12px 17px; cursor: pointer;
     border-left: 3px solid transparent; transition: 0.2s;
 }
 .league-icon-wrapper {
-    width: 36px; height: 36px; min-width: 36px; display: flex; align-items: center; justify-content: center;
+    width: 40px; height: 40px; min-width: 40px; display: flex; align-items: center; justify-content: center;
     background: rgba(255, 255, 255, 0.05); border-radius: 10px; border: 1px solid var(--border);
 }
-.league-icon-wrapper img { width: 24px; height: 24px; object-fit: contain; }
+.league-icon-wrapper img { width: 28px; height: 28px; object-fit: contain; }
 
-.league-name-text { opacity: 0; margin-left: 15px; font-family: 'Orbitron'; font-size: 11px; transition: 0.3s; }
-.sidebar:hover .league-name-text { opacity: 1; }
+.league-name-text {
+    opacity: 0; width: 0; overflow: hidden; white-space: nowrap;
+    transition: opacity 0.3s ease, width 0.3s ease;
+    margin-left: 10px; font-family: 'Orbitron'; font-size: 13px; color: #fff;
+}
+.sidebar:hover .league-name-text { opacity: 1; width: 180px; }
 
-.league-item.active { background: rgba(0, 255, 136, 0.1); border-left-color: var(--neon-green); }
+.league-item:hover, .league-item.active {
+    background: rgba(0, 183, 255, 0.1); border-left: 3px solid var(--neon-blue);
+    box-shadow: 0 0 10px rgba(0, 183, 255, 0.2);
+}
 
-/* --- TARTALOM (Középen a meccsek) --- */
-.content-area { flex: 1; display: flex; flex-direction: column; align-items: center; padding: 30px; overflow-y: auto; }
+/* --- TARTALOM TERÜLET (Középen) --- */
+.content-area { 
+    flex: 1; display: flex; flex-direction: column; align-items: center; 
+    padding: 25px; overflow-y: auto; scrollbar-width: none; 
+}
 #match-container { width: 100%; max-width: 850px; }
 
 /* Dátumválasztó */
-#date-selector { display: flex; gap: 10px; margin-bottom: 30px; justify-content: center; }
-.date-btn {
-    background: rgba(255,255,255,0.03); border: 1px solid var(--border); color: rgba(255,255,255,0.4);
-    padding: 10px 18px; border-radius: 12px; font-family: 'Orbitron'; font-size: 10px; cursor: pointer;
+#date-selector {
+    display: flex; justify-content: center; gap: 12px; margin-bottom: 25px;
+    width: 100%; flex-wrap: nowrap; overflow-x: auto;
 }
-.date-btn.active { border-color: var(--neon-blue); color: var(--neon-blue); background: rgba(14, 165, 233, 0.1); }
+.date-btn {
+    background: rgba(255, 255, 255, 0.03); border: 1px solid var(--border); color: rgba(255, 255, 255, 0.5);
+    padding: 12px 20px; border-radius: 12px; font-family: 'Orbitron'; font-size: 11px; cursor: pointer; transition: 0.3s;
+}
+.date-btn.active { background: rgba(0, 243, 255, 0.15); border-color: #00f3ff; color: #00f3ff; box-shadow: 0 0 15px rgba(0, 243, 255, 0.2); }
 
-/* --- MECCSKÁRTYA & TEAM GLOW/ROTATE --- */
+/* --- MECCSKÁRTYA & TEAM EFFEKTEK --- */
 .match-card {
-        background: rgba(30, 41, 59, 0.4); border: 1px solid var(--border); border-radius: 24px;
-        padding: 25px; margin-bottom: 15px; display: flex; flex-direction: column; gap: 20px;
-        transition: 0.3s cubic-bezier(0.4, 0, 0.2, 1);
-    }
-    .match-card:hover { border-color: var(--neon-blue); background: rgba(30, 41, 59, 0.6); transform: translateY(-4px); }
+    background: rgba(30, 41, 59, 0.4); border: 1px solid var(--border); border-radius: 24px;
+    padding: 25px; margin-bottom: 15px; display: flex; flex-direction: column; gap: 20px;
+    transition: 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+}
+.match-card:hover { border-color: var(--neon-blue); background: rgba(30, 41, 59, 0.6); transform: translateY(-4px); }
 
-    .match-info-row { display: flex; align-items: center; justify-content: space-between; width: 100%; }
+.team-link { flex: 1; display: flex; flex-direction: column; align-items: center; gap: 10px; cursor: pointer; }
+.team-link img { width: 55px; height: 55px; object-fit: contain; transition: 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275); }
 
-.team-link { flex: 1; display: flex; flex-direction: column; align-items: center; gap: 12px; cursor: pointer; }
-.team-link img { width: 60px; height: 60px; object-fit: contain; transition: 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275); }
-
-/* Kért effekt: Elfordulás és Glow */
+/* Glow és elfordulás animáció a csapatnévre/logóra */
 .team-link:hover img { 
     transform: rotate(15deg) scale(1.2); 
     filter: drop-shadow(0 0 15px var(--neon-blue)); 
 }
-.team-link span { font-family: 'Orbitron'; font-size: 11px; font-weight: 800; text-align: center; }
+.team-link span { font-weight: 800; font-family: 'Orbitron'; font-size: 11px; text-align: center; }
 
-.score-display { font-family: 'Orbitron'; font-size: 2.5rem; font-weight: 900; color: var(--neon-green); }
+.score-display { font-family: 'Orbitron'; font-size: 2.2rem; font-weight: 900; color: var(--neon-green); }
+.score-live { color: var(--neon-red); animation: pulse 1s infinite; text-shadow: 0 0 15px var(--neon-red); }
 
-/* --- ÉLŐ TABELLA (Jobb oldal) --- */
+/* Odds Gombok */
+.match-odds-row { display: grid; grid-template-columns: repeat(3, 1fr); gap: 12px; width: 100%; }
+.odds-btn {
+    background: rgba(255, 255, 255, 0.05); border: 1px solid var(--border); border-radius: 12px;
+    padding: 12px; display: flex; flex-direction: column; align-items: center; cursor: pointer; transition: 0.2s;
+}
+.odds-btn:hover { background: rgba(14, 165, 233, 0.2); border-color: var(--neon-blue); }
+.odds-val { font-family: 'Orbitron'; font-size: 13px; font-weight: bold; color: var(--neon-green); }
+
+/* --- ÉLŐ TABELLA (Sidebar formázás) --- */
 .standings-sidebar {
-    width: 350px; background: rgba(10, 10, 12, 0.8); backdrop-filter: blur(20px);
-    border-left: 1px solid var(--border); padding: 20px; overflow-y: auto; flex-shrink: 0;
+    width: 380px; background: rgba(10, 10, 12, 0.8); border-left: 1px solid var(--border);
+    padding: 20px; overflow-y: auto; flex-shrink: 0; backdrop-filter: blur(20px);
 }
 
-.standings-header {
-    font-family: 'Orbitron'; font-size: 12px; color: var(--neon-blue);
-    margin-bottom: 20px; display: flex; align-items: center; gap: 10px;
-    text-transform: uppercase; letter-spacing: 2px;
-}
-tool-btn { 
-        background: rgba(255,255,255,0.05); border: 1px solid var(--border);
-        color: var(--text); padding: 10px 16px; border-radius: 10px;
-        cursor: pointer; font-family: 'Orbitron'; font-size: 11px; transition: 0.3s;
-        display: flex; align-items: center; justify-content: center;
-    }
-    .tool-btn:hover { border-color: var(--neon-blue); background: rgba(14, 165, 233, 0.2); }
-        
-.standings-table { width: 100%; border-collapse: separate; border-spacing: 0 4px; }
-.standings-table th { font-size: 10px; color: rgba(255,255,255,0.4); padding: 10px; text-align: center; font-family: 'Orbitron'; }
-.standings-table td { background: rgba(255,255,255,0.03); padding: 12px 8px; font-size: 12px; text-align: center; }
+.standings-table { width: 100%; border-collapse: separate; border-spacing: 0 6px; }
+.standings-table th { font-family: 'Orbitron'; font-size: 10px; color: var(--neon-blue); padding: 10px; text-transform: uppercase; }
+.standings-table td { padding: 14px 8px; background: rgba(255,255,255,0.03); text-align: center; font-size: 12px; border-top: 1px solid var(--border); }
 
-/* Csapatnév a tabellán */
-.standings-team-cell { display: flex; align-items: center; gap: 8px; text-align: left !important; font-weight: 600; }
-.standings-team-cell img { width: 20px; height: 20px; object-fit: contain; }
-
-/* Helyezés száma */
 .pos-num {
-    width: 28px; height: 28px; background: var(--neon-blue); color: #000;
-    border-radius: 6px; display: flex; align-items: center; justify-content: center;
-    font-weight: 900; font-family: 'Orbitron'; font-size: 11px;
+    width: 30px; height: 30px; line-height: 30px; margin: 0 auto; background: var(--neon-blue);
+    color: #000; border-radius: 8px; font-weight: 900; font-family: 'Orbitron'; font-size: 11px;
 }
 
-/* --- TOOLTIP & BANNER --- */
+/* Tooltip */
 .sexy-tooltip {
-    position: fixed; width: 280px; background: #0f0f1a; border: 1px solid var(--neon-blue);
-    border-radius: 12px; padding: 15px; z-index: 10001; opacity: 0; visibility: hidden;
+    position: fixed; width: 280px; background: rgba(15, 15, 26, 0.98);
+    border: 1px solid #00b7ff; border-radius: 12px; padding: 15px;
+    z-index: 10001; opacity: 0; visibility: hidden; transition: 0.3s;
 }
 .sexy-tooltip.active { opacity: 1; visibility: visible; }
 
-#goal-banner {
-    position: fixed; top: -100px; left: 0; right: 0; height: 60px;
-    background: var(--neon-green); color: #000; display: flex; align-items: center; justify-content: center;
-    font-family: 'Orbitron'; font-weight: 900; z-index: 9999; transition: 0.5s;
+/* --- Animációk --- */
+@keyframes pulse { 0%, 100% { opacity: 1; } 50% { opacity: 0.5; } }
+@keyframes goal-flash {
+    0% { background-color: rgba(255, 62, 62, 0.95); transform: scale(1.02); }
+    50% { background-color: rgba(255, 62, 62, 0.3); transform: scale(1); }
+    100% { background-color: rgba(255, 62, 62, 0.95); transform: scale(1.02); }
 }
-#goal-banner.show { top: 0; }
+.match-card.goal-highlight { animation: goal-flash 0.5s ease-in-out infinite !important; }
         
     /* --- Mobil Nézet --- */
     .mobile-nav { position: fixed; bottom: 0; left: 0; right: 0; height: 70px; background: var(--glass); display: none; justify-content: space-around; align-items: center; z-index: 1100; border-top: 1px solid var(--border); backdrop-filter: blur(20px); }
@@ -1601,6 +1617,7 @@ function handleLeagueClick(id) {
     </script>
 </body>
 </html>
+
 
 
 
