--- a/meccsek.html
+++ b/meccsek.html
@@ -107,7 +107,7 @@
 .sidebar:hover, .sidebar.open { 
     width: 280px; 
 }
-    .sidebar-header { padding: 20px; font-family: 'Orbitron'; font-size: 11px; color: var(--neon-blue); border-bottom: 1px solid var(--border); letter-spacing: 2px; text-transform: uppercase; }
+      .sidebar-header { padding: 20px; font-family: 'Orbitron'; font-size: 11px; color: var(--neon-blue); border-bottom: 1px solid var(--border); letter-spacing: 2px; text-transform: uppercase; }
 
     .standings-sidebar { 
         position: fixed; right: 0; top: 75px; bottom: 0; width: 400px; 
@@ -218,11 +218,11 @@
     margin: 10px 12px;
     padding: 8px;
     border-radius: 12px;
-    display: flex;
+    display: flex; align-items: center; padding: 15px 17px; cursor: pointer;
+    border-left: 4px solid transparent; transition: 0.2s;
     align-items: center;
     cursor: pointer;
     transition: all 0.2s ease;
-    border: 1px solid transparent;
     gap: 15px;
 }
     .league-item.active { background: rgba(0, 255, 136, 0.1); border-color: var(--neon-green); }
@@ -243,9 +243,9 @@
     font-size: 11px;
 }
 .league-icon-wrapper {
-    width: 40px;
-    height: 40px;
-    min-width: 40px; /* Garantálja, hogy ne nyomódjon össze */
+    width: 46px;
+    height: 46px;
+    min-width: 46px; /* Garantálja, hogy ne nyomódjon össze */
     display: flex;
     align-items: center;
     justify-content: center;
@@ -285,8 +285,8 @@
     pointer-events: none;
 }
 .league-icon-wrapper img {
-    width: 28px;
-    height: 28px;
+    width: 32px;
+    height: 32px;
     object-fit: contain;
 }        
     .date-strip { display: flex; gap: 12px; margin-bottom: 25px; overflow-x: auto; scrollbar-width: none; width: 100%; }
@@ -1781,6 +1781,7 @@ function handleLeagueClick(id) {
     </script>
 </body>
 </html>
+
 
 
 
