--- a/meccsek.html
+++ b/meccsek.html
@@ -79,20 +79,18 @@
     /* --- Elrendezés --- */
     .main-wrapper { display: flex; margin-top: 75px; min-height: calc(100vh - 75px); }
 
-  .sidebar {
-    position: fixed;
-    top: 70px /* Header magassága */
-    left: 0;
-    height: calc(100vh - 70px);
-    width: 280px; /* Összecsukott állapot */
-    background: rgba(10, 10, 18, 0.95);
-    border-right: 1px solid rgba(0, 183, 255, 0.2);
-    transition: width 0.3s cubic-bezier(0.4, 0, 0.2, 1);
-    z-index: 999;
-    overflow-x: hidden;
-    overflow-y: auto;
-    padding-top: 20px;
+  .sidebar { 
+    width: 80px; /* Csak az ikonoknak elég hely */
+    background: var(--glass); 
+    backdrop-filter: blur(25px); 
+    border-right: 1px solid var(--border); 
+    overflow-y: auto; 
+    overflow-x: hidden; 
     flex-shrink: 0;
+    transition: width 0.4s cubic-bezier(0.4, 0, 0.2, 1); /* Sima nyitás-csukás */
+    display: flex;
+    flex-direction: column;
+    align-items: center; /* Középre igazítja az ikonokat */
 }
 
 .sidebar::-webkit-scrollbar {
@@ -106,24 +104,29 @@
     width: 240px; /* Kinyílt állapot */
 } 
 .sidebar:hover, .sidebar.open { 
-    width: 280px; 
+    width: 280px;
+    align-items: flex-start; /* Nyitott állapotban balra igazít */
 }
-     .sidebar-header { 
+    .sidebar-header { 
+    width: 100%;
     padding: 20px; 
     display: flex; 
     align-items: center; 
-    gap: 10px; /* Távolság a kupa és a felirat között */
-    white-space: nowrap; /* Ne törje ketté a szöveget */
-    font-family: 'Orbitron'; 
-    font-size: 11px; 
-    color: var(--neon-blue); 
+    justify-content: center; /* Alapból középen a kupa */
+    gap: 15px;
     border-bottom: 1px solid var(--border); 
-    letter-spacing: 2px; 
-    text-transform: uppercase; 
 }
+.sidebar.open .sidebar-header {
+    justify-content: flex-start; /* Nyitva balra tolódik */
+}
+.sidebar.open .league-item {
+    justify-content: flex-start;
+    padding: 12px 20px;
+}        
 .header-emoji {
-    font-size: 1.4rem; /* Hogy a kupa szép nagy legyen */
+    font-size: 1.6rem;
     flex-shrink: 0;
+    display: block;
 }
         
     .standings-sidebar { 
@@ -233,13 +236,13 @@
     /* --- Liga Választó & Dátum --- */
    .league-item {
     margin: 10px 12px;
-    padding: 8px;
+    padding: 15px 0;
     border-radius: 12px;
     display: flex; align-items: center; padding: 15px 17px; cursor: pointer;
     border-left: 4px solid transparent; transition: 0.2s;
     align-items: center;
     cursor: pointer;
-    transition: all 0.2s ease;
+    transition: background 0.3s;
     gap: 15px;
 }
     .league-item.active { background: rgba(0, 255, 136, 0.1); border-color: var(--neon-green); }
@@ -252,12 +255,15 @@
     background: rgba(255,255,255,0.05); /* Enyhe háttér az ikonnak, hogy kitűnjön */
     padding: 4px;
 }
-.league-item span {
-    opacity: 0;
-    transition: opacity 0.2s;
-    font-weight: 600;
-    font-family: 'Orbitron';
-    font-size: 11px;
+.header-text, 
+.league-item span { 
+    display: block;
+    white-space: nowrap;
+    opacity: 0; /* Alapból láthatatlan */
+    transition: opacity 0.3s;
+    pointer-events: none;
+    width: 0; /* Ne foglaljon helyet becsukva */
+    overflow: hidden;
 }
 .league-icon-wrapper {
     width: 46px;
@@ -381,9 +387,13 @@
         .mobile-nav { display: flex; }
         .standings-sidebar { width: 85%; }
     }
-        .sidebar.open { 
-        width: 280px; 
-    }
+        .sidebar.open .header-text,
+.sidebar.open .league-item span { 
+    opacity: 1;
+    width: auto;
+    pointer-events: auto;
+    margin-left: 10px;
+}
         #date-selector {
         justify-content: flex-start; /* Mobilon jobb, ha szélről indul a görgetés miatt */
         padding-left: 20px;
@@ -1798,6 +1808,7 @@ function handleLeagueClick(id) {
     </script>
 </body>
 </html>
+
 
 
 
